# matrix-structs

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: mtx.hpp
include/mtx/: events.hpp  identifiers.hpp  responses.hpp
include/mtx/events/: aliases.hpp  avatar.hpp  canonical_alias.hpp  collections.hpp  common.hpp  create.hpp  guest_access.hpp  history_visibility.hpp  join_rules.hpp  member.hpp  name.hpp  pinned_events.hpp  power_levels.hpp  redaction.hpp  topic.hpp
include/mtx/events/messages/: audio.hpp  emote.hpp  file.hpp  image.hpp  notice.hpp  text.hpp  video.hpp
include/mtx/responses/: sync.hpp
tests/: events.cpp  identifiers.cpp  messages.cpp  responses.cpp
